Avoid comment layers containers overlapping with floating elements

--- a/src/less/commentLayers.less
+++ b/src/less/commentLayers.less
@@ -1,3 +1,10 @@
+// Modern replacement of clearfix
+.flow-root() {
+  display: flow-root;
+  // Hack for Edge
+  -ms-display: grid;
+}
+
 .cd-commentUnderlay {
   position: absolute;
   z-index: -1;
@@ -75,4 +82,5 @@
 .cd-commentLayersContainerParent {
   position: relative;
   z-index: 0;
+  .flow-root();
 }
